# how-to-bypass-amazon-captcha-when-scraping

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  amazon_captcha_detect.py  amazon_captcha_minimal.py  amazon_captcha_save.py  pyproject.toml  requirements.txt  thordata_amazon_product_by_asin.py  thordata_amazon_search.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-pages.yml
amazon_captcha/: __init__.py  __main__.py  batch.py  cli.py  detect.py  export.py  fetch.py  headers.py  thordata_client.py
docs/: index.html  playground.html
docs/assets/css/: playground.css  style.css
docs/assets/js/: main.js  playground.js
examples/: amazon_captcha_detect.py  amazon_captcha_minimal.py  amazon_captcha_save.py  curl_cffi_tls_demo.py  playwright_stealth_demo.py  retry_backoff_demo.py  thordata_amazon_product_by_asin.py  thordata_amazon_search.py  thordata_batch_asin.py
images/: architecture_flow.mmd
tests/: __init__.py  test_detect.py  test_export.py  test_fetch.py  test_headers.py
